Update detectar usuario automáticamente